--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: blue;
+  height: 550px;
+  width: 350px;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
+  border-radius: 15px;
+  box-shadow: 15px 15px 15px grey;
+}
+.circle {
+  border: none;
+  height: 50%;
+  width: 80%;
+  border-radius: 1000px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+button {
+  height: 80px;
+  width: 80px;
+  font-size: 30px;
+  font-weight: lighter;
+  color: white;
+  background-color: gray;
+  border-radius: 100px;
+  border: 2px solid white;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  background-color: lightgray;
+}
+.buttons {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.temp {
+  background-color: white;
+  color: gray;
+  height: 20px;
+  width: 20px;
+  font-size: smaller;
+  font-weight: bolder;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+}
+.temp:hover {
+  background-color: white;
+}
+.toggle {
+  background-color: white;
+  padding: 2px;
+  position: relative;
+  right: 140px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+}
+.cold {
+  background-color: lightblue;
+}
+.good {
+  background-color: yellow;
+  color: blue;
+}
+.hot {
+  background-color: red;
 }
